<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_contact_list_select"
        android:icon="@drawable/ic_checkbox"
        android:orderInCategory="1"
        android:title="@string/label_action_select"
        app:showAsAction="always"/>

    <item
        android:id="@+id/action_contact_list_cancel"
        android:icon="@drawable/ic_cancel"
        android:orderInCategory="1"
        android:title="@string/label_action_cancel"
        android:visible="false"
        app:showAsAction="always"/>

    <item
        android:id="@+id/action_contact_list_delete"
        android:icon="@drawable/ic_bin"
        android:orderInCategory="1"
        android:title="@string/label_action_delete"
        android:visible="false"
        app:showAsAction="always"/>
</menu>