<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="dev.etna.jabberclient.LoginActivity"
    android:gravity="center">

    <EditText
        android:id="@+id/serverAddress"
        android:inputType="textUri"
        android:layout_alignParentStart="true"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:hint="@string/label_server_address" />

    <EditText
        android:id="@+id/username"
        android:inputType="text"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/serverAddress"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_width="fill_parent"
        android:hint="@string/label_username" />

    <EditText
        android:id="@+id/password"
        android:inputType="textPassword"
        android:layout_alignParentStart="true"
        android:layout_below="@id/username"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_width="fill_parent"
        android:hint="@string/label_password" />

    <Button
        android:id="@+id/submit"
        android:layout_alignParentStart="true"
        android:layout_below="@id/password"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_width="fill_parent"
        android:text="@string/label_action_login" />

</RelativeLayout>
