<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context=".fragments.ContactAddFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">

        <EditText
            android:id="@+id/serverAddress"
            android:inputType="textUri"
            android:layout_alignParentStart="true"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:hint="@string/label_server_address" />

        <EditText
            android:id="@+id/username"
            android:inputType="text"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/serverAddress"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_width="fill_parent"
            android:hint="@string/label_contact_username" />

        <Button
            android:id="@+id/submit"
            android:layout_alignParentStart="true"
            android:layout_below="@id/username"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_width="fill_parent"
            android:text="@string/label_action_contact_add" />

    </RelativeLayout>
</FrameLayout>
